 # [#22711] Fixes to example content plugin (thanks Matt Thomas)
 # [#22269] JModelAdmin uses hard coded "id" field (Thanks Sam)
 # [#21656] Ability to limit System Info access (thanks Mathavan Jeyadev)
 # [#22335] Random "HTTP 500 Internal Server Error" on Contact (single) page (thanks Artyom Bisyarin)
 # [#22710] com_categories component does not manage well help url

5-Oct-2010 Jean-Marie Simonet
 $ Normalizing some strings.
 
4-oct-2010 Christophe Demko
 # [#22049] Site Maintenance Menu (thanks bill richardson, Mathavan Jeyadev)

-------------------- 1.6.0 Beta11 Release [04-Oct-2010] ------------------

4-oct-2010 Christophe Demko
 # [#22580] Categories - No reset to show - when moving between components (thanks bill richardson and Mathavan Jeyadev)

3-Oct-2010 Jean-Marie Simonet
 # [#22683] Pagebreak_css. Thanks Angie.

2-Oct-2010 Jean-Marie Simonet
 # [#22306] Module CSS class and id changes  Thanks Angie.
 # [#22487] Separating weblink from content on 22100. Thanks Elin.
 # [#22663] Pagebreak output. Thanks Angie.

30-Sep-2010 Jean-Marie Simonet
 # [#22582] Menu location lost after pressing "Save & New". Thanks Mathavan
 
29-Sep-2010 Jean-Marie Simonet
 # [#22512] Category didn't load component translations. Thanks Christophe and Marcelo.
 # [#22591] Trashing an item in Featured Articles view redirects to non-Featured Articles view. Thanks Mathavan.

28-Sep-2010 Ron Severdia
 # Fixed misplaced DIV in Atomic
 ^ Updated Atomic preview & thumbnail
 ^ Updated Blueprint plug-ins
 # Fix validation issue in Atomic login override
 
28-Sep-2010 Christophe Demko
 # [#22603] XML well formedness errors in com_messages and com_weblinks (thanks Rouven Weßling)
 # [#22125] We don't have CSS for system "warning" messages - deleting and moving icons

28-Sep-2010 Mark Dexter
 # [#21766] If an unpublished article is linked there are errors instead of a message/model change

28-Sep-2010 Jean-Marie Simonet
 $ Adding missing strings in installation.
